--- a/src/main/webapp/templates-hidden/bigwall.html
+++ b/src/main/webapp/templates-hidden/bigwall.html
@@ -52,10 +52,10 @@
   </head>
   <body>
     <div id="sitepane">
-       <lift:comet type="RotatingIFrame"><vbad:iframe>Missing Rotating IFrame</vbad:iframe></lift:comet>
+      <lift:comet type="RotatingIFrame"><vbad:iframe>Missing Rotating IFrame</vbad:iframe></lift:comet>
     </div>
     <div id="statuspane">
-	this is the status pane
+	  <lift:BuildDashboard.show />
     </div>
     <div id="infopane">
         this is the info pane  
