--- a/src/main/webapp/ci/index.html
+++ b/src/main/webapp/ci/index.html
@@ -1,5 +1,5 @@
 <lift:surround with="default" at="content">
-  <a href='/ci/add'>Add a CI Platform</a>
+  <a href='/ci/add'>Add a CI Platform</a> -->
   <table width="90%">
     <lift:CI.platforms />
   </table>
