corrected delete, added edit

--- a/src/main/webapp/ci/edit.html
+++ b/src/main/webapp/ci/edit.html
@@ -1,3 +1,5 @@
 <lift:surround with="default" at="content">
-  <p>edit</p>
+  <table>
+    <lift:CI.edit form="post" />
+  </table>
 </lift:surround>
