CI platform add/edit/delete - remove restrictions on username/password

--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -51,6 +51,7 @@
   </style>
   </head>
   <body>
+    <div><lift:Msgs showAll="true"/><hr class="space"/></div>
     <lift:bind name="content" />
   </body>
 </html>
