added more front end pages

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,2 +1,11 @@
-<lift:surround with="bigwall" at="content">
+<lift:surround with="default" at="content">
+    <h1>Welcome to vBaD</h1>
+    <br/>
+    <p>Visualising Builds and Deploys</p>
+    <br/>
+    <br/>
+    <a href="/ci/index">Configure CI Platforms</a><br/>
+    <a href="/build/index">Configure Builds</a><br/>
+    <a href="/site/index">Configure Sites</a><br/>
+    <a href="/dashboard/index">View Dashboard</a><br/>
 </lift:surround>
