--- a/src/main/webapp/site/index.html
+++ b/src/main/webapp/site/index.html
@@ -1,8 +1,8 @@
 <lift:surround with="default" at="content">
   <table width="90%">
-    <lift:CI.platforms />
+    <lift:CI.sites />
   </table>
   <br/>
-  <a href="/ci/add">Add a CI Platform</a><br/>
+  <a href="/sites/add">Add a Site</a><br/>
   <a href="/">Home</a><br/>
 </lift:surround>
