added build status comet actor

--- a/src/main/webapp/templates-hidden/bigwall.html
+++ b/src/main/webapp/templates-hidden/bigwall.html
@@ -55,7 +55,7 @@
       <lift:comet type="RotatingIFrame"><vbad:iframe>Missing Rotating IFrame</vbad:iframe></lift:comet>
     </div>
     <div id="statuspane">
-	  <lift:BuildDashboard.show />
+	  <lift:comet type="BuildStatusRotate"><vbad:buildStatus>Missing Build Status</vbad:buildStatus></lift:comet>
     </div>
     <div id="infopane">
         this is the info pane  
