--- a/src/main/webapp/dashboard/index.html
+++ b/src/main/webapp/dashboard/index.html
@@ -1,2 +1,11 @@
 <lift:surround with="bigwall" at="content">
+    <div id="sitepane">
+      <lift:comet type="RotatingIFrame"><vbad:iframe>Missing Rotating IFrame</vbad:iframe></lift:comet>
+    </div>
+    <div id="statuspane">
+	  <lift:comet type="BuildStatusRotate"><vbad:buildStatus>Missing Build Status</vbad:buildStatus></lift:comet>
+    </div>
+    <div id="infopane">
+        this is the info pane
+    </div>
 </lift:surround>
