--- a/src/main/webapp/templates-hidden/bigwall.html
+++ b/src/main/webapp/templates-hidden/bigwall.html
@@ -8,57 +8,8 @@
     <lift:CSS.fancyType />
     <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
     <script id="json" src="/classpath/json.js" type="text/javascript"/>
-    <style type="text/css">
-/* <![CDATA[ */
-        body,
-        html {
-                margin:0;
-                padding:0;
-                color:#000;
-        }
-        #header {
-                padding:5px 10px;
-                background:#ddd;
-        }
-        h1 {
-                margin:0;
-        }
-        #sitepane {
-                float:left;
-                width:1024px;
-                padding:0px;
-        }
-        h2 {
-                margin:0 0 1em;
-        }
-        #statuspane {
-                float:right;
-                padding:0px;
-                background:#99c;
-        }
-        #infopane {
-                clear:both;
-                padding:5px 10px;
-                background:#cc9;
-        }
-        #infopane p {
-                margin:0;
-        }
-        * html #info-pane {
-                height:1px;
-        }
-  /* ]]> */
-  </style>
   </head>
-  <body>
-    <div id="sitepane">
-      <lift:comet type="RotatingIFrame"><vbad:iframe>Missing Rotating IFrame</vbad:iframe></lift:comet>
-    </div>
-    <div id="statuspane">
-	  <lift:comet type="BuildStatusRotate"><vbad:buildStatus>Missing Build Status</vbad:buildStatus></lift:comet>
-    </div>
-    <div id="infopane">
-        this is the info pane  
-    </div>
+  <body style="background-color: black;">
+    <lift:bind name="content" />
   </body>
 </html>
