--- a/src/main/webapp/dashboard/1920x1200.html
+++ b/src/main/webapp/dashboard/1920x1200.html
@@ -6,8 +6,9 @@
       </div>
     </div>
     <div id="toppane" style="position: absolute; top: 0px; left: 448px; width: 1024px; height: 216px; margin: 0px; padding: 0px;">
-        <div id="timepane" style="color: white;">
-            this is the time pane
+        <div id="timepane" style="color: white; font-size: 32px; text-align:center;">
+            <br/>
+            <lift:comet type="CurrentTime"><vbad:currentTime>Missing Build Status</vbad:currentTime></lift:comet>
         </div>
     </div>
     <div id="rightpane" style="position: absolute; top: 0px; left: 1472px; width: 448px; height: 1200px; margin: 0px; padding: 0px;">
