--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,4 +8,6 @@
     <a href="/build/index">Configure Builds</a><br/>
     <a href="/site/index">Configure Sites</a><br/>
     <a href="/dashboard/index">View Dashboard</a><br/>
+    <a href="/dashboard/1920x1080">HDTV Dashboard (1920x1080)</a>
+    <a href="/dashboard/1920x1200">WUXGA Dashboard (1920x1200)</a>
 </lift:surround>
