adjust dimensions, fix 1200 vs 1080, and font sizing

--- a/src/main/webapp/dashboard/1920x1200.html
+++ b/src/main/webapp/dashboard/1920x1200.html
@@ -6,7 +6,7 @@
       </div>
     </div>
     <div id="toppane" style="position: absolute; top: 0px; left: 448px; width: 1024px; height: 216px; margin: 0px; padding: 0px;">
-        <div id="timepane" style="color: white; font-size: 32px; text-align:center;">
+        <div id="timepane" style="color: white; font-size: 36px; text-align:center;">
             <br/>
             <lift:comet type="CurrentTime"><vbad:currentTime>Missing Current Time</vbad:currentTime></lift:comet>
         </div>
@@ -21,7 +21,9 @@
       </div>
     </div>
     <div id="bottompane" style="position: absolute; top: 984px; left: 448px; width: 1024px; height: 216px; margin: 0px; padding: 0px;">
-        <div id="tickerpane" style="color: white;">
+        <div id="tickerpane" style="color: white; font-size: 32px;">
+            <br/>
+            <lift:comet type="TickerFrame"><vbad:tickerFrame>Missing Ticker IFrame</vbad:tickerFrame></lift:comet>
         </div>
     </div>
 
