--- a/src/main/webapp/dashboard/1920x1080.html
+++ b/src/main/webapp/dashboard/1920x1080.html
@@ -1,5 +1,5 @@
 <lift:surround with="bigwall" at="content">
-  <div id="dashboard">
+  <div id="dashboard" style="position: absolute; top: 0px; left: 0px; width: 1920px; height: 1080px; margin: 0px; padding: 0px;">
     <div id="leftpane" style="position: absolute; top: 0px; left: 0px; width: 448px; height: 1080px; margin: 0px; padding: 0px;">
       <div id="statuspane" style="color: white;">
 	    <lift:comet type="BuildStatusRotate"><vbad:buildStatus>Missing Build Status</vbad:buildStatus></lift:comet>
@@ -11,7 +11,7 @@
             <lift:comet type="CurrentTime"><vbad:currentTime>Missing Current Time</vbad:currentTime></lift:comet>
         </div>
     </div>
-    <div id="rightpane" style="position: absolute; top: 0px; left: 1472px; width: 448px; height: 1200px; margin: 0px; padding: 0px;">
+    <div id="rightpane" style="position: absolute; top: 0px; left: 1472px; width: 448px; height: 1080px; margin: 0px; padding: 0px;">
       <div id="infopane" style="color: white;">
         this is the info pane
       </div>
