--- a/src/main/webapp/templates-hidden/bigwall.html
+++ b/src/main/webapp/templates-hidden/bigwall.html
@@ -8,6 +8,20 @@
     <lift:CSS.fancyType />
     <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
     <script id="json" src="/classpath/json.js" type="text/javascript"/>
+    <script language="javascript">
+      after_load = function( url, start, observer ) {
+        duration = new Date() - start;
+        $('#' + observer).text("Loaded [" + url + "] in [" + duration + "]ms");
+      }
+      load_into_frame = function( url, frame, observer ) {
+        // set start pointing to blank frame
+        $('#' + frame).attr('src', '_blank');
+        $('#' + observer).text("Loading [" + url + "]");
+        start = new Date();
+        $('#' + frame).load(function () { after_load(url,start,observer); });
+        $('#' + frame).attr('src', url);
+      }
+    </script>
   </head>
   <body style="background-color: black;">
     <lift:bind name="content" />
