initial commit of TTS announce

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,11 @@
     <a href="/ci/index">Configure CI Platforms</a><br/>
     <a href="/build/index">Configure Builds</a><br/>
     <a href="/site/index">Configure Sites</a><br/>
+    <br/>
     <a href="/dashboard/index">View Dashboard</a><br/>
-    <a href="/dashboard/1920x1080">HDTV Dashboard (1920x1080) - Small IFrame</a>
-    <a href="/dashboard/medium_1920x1080">HDTV Dashboard (1920x1080) - Medium IFrame</a>
+    <a href="/dashboard/1920x1080">HDTV Dashboard (1920x1080) - Small IFrame</a><br/>
+    <a href="/dashboard/medium_1920x1080">HDTV Dashboard (1920x1080) - Medium IFrame</a><br/>
+    <br/>
+    <a href="/announce">Announce</a><br/>
+    <br/>
 </lift:surround>
